# Projekt_SO2

./: CMakeLists.txt  main.cpp
